<resources>
    <string name="app_name">RadianceX</string>
    <string name="dictionary">Dictionary</string>
    <string name="ask">Ask</string>
    <string name="blog">Blog</string>
    <string name="inbox">Inbox</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_add_favourite">Add to favourite</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="save_entry">Save</string>
    <string name="browse">Browse</string>
    <string name="go_to_account_settings">GO TO ACCOUNT SETTINGS</string>
    <string name="vu_hoang_thai_duong">Vu Hoang Thai Duong</string>
    <string name="avatar">Avatar</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="select_all">Select all</string>
    <string name="change_display_order">Change display order</string>
    <string name="email">Email</string>
    <string name="new_entry">New Entry</string>
    <string name="new_sentence">New Sentence</string>
    <string name="new_note">New Note</string>
    <string name="ask_a_question">Ask a question</string>
    <string name="new_blog_post">New blog post</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="load_file">Load file</string>
    <string name="entry_id">Entry ID</string>
    <string name="next">Next</string>
    <string name="shuffle">Shuffle</string>
    <string name="word_of_the_day">Word of the day</string>
    <string name="number_of_cards">Number of cards</string>
    <string name="previous">Previous</string>
    <string name="edit">Edit</string>
    <string name="learn">Learn</string>
    <string name="japanese">Japanese</string>
    <string name="translation">Translation</string>
    <string name="hint">Hint</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="radiancex">RadianceX</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="password">Password</string>
    <string name="or_go_back_to_log_in">…or go back to log in</string>
    <string name="long_text">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero\'s De Finibus Bonorum et Malorum for use in a type specimen book.</string>
    <string name="no_item_message">There\'s nothing here yet :(\nConsider adding some new items?</string>
    <string name="daily_training">Daily Training</string>
    <string name="hone_your_skills_everyday">Hone your skills everyday</string>
    <string name="see_everything">See everything</string>
    <string name="note">Note</string>
    <string name="sign_out_dialog_title">Sign out of RadianceX?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_of_radiancex">Sign out of RadianceX?</string>

</resources>