<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/action_add"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add" />

    <item
        android:id="@+id/action_change_display_order"
        app:showAsAction="never"
        android:title="@string/change_display_order" />
    <item
        android:id="@+id/action_select_all"
        app:showAsAction="never"
        android:title="@string/select_all" />


</menu>
