<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/a"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_baseline_error_outline_24" />

        <TextView
            android:id="@+id/text_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_out_of_radiancex"
            android:textColor="#ff000000"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorDivider"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/cancel"
        android:textColor="@color/colorBlack" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignOut"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/sign_out" />

</LinearLayout>